# bitwallet-lite

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
src/: bitcoin_rpc_client.rs  main.rs  wallet.rs  wallet_struct.rs
src/actions/: mod.rs
src/routes/: mod.rs
src/tests/: wallet_struct_test.rs
tests/wallet_struct_test/: wallet_struct_test.rs
