[package]
name = "bit_wallet_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "1.0.0-alpha.7" }
bitcoincore-rpc = "0.18.0"
actix-web = "4.0"
bitcoin = "0.27.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
simplelog = "0.8"
log = "0.4"
dotenv = "0.15.0"
bip39 = "2.0.0"