[package]
name = "bit_wallet_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.29.0"
bitcoincore-rpc = "0.18.0"
actix-web = "4.0"
bitcoin = "0.27.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
simplelog = "0.8"
log = "0.4"
dotenv = "0.15.0"
tiny-bip39 = "1.0.0"
miniscript = "0.11.0"
